# jlcat

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-02-jlcat-design.md  2026-02-04-flat-mode-design.md  2026-02-04-flat-mode-implementation.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/core/: cache.rs  extractor.rs  filter.rs  flat.rs  mod.rs  path.rs  schema.rs  selector.rs  sorter.rs  table.rs  value.rs
src/input/: cached.rs  detector.rs  indexed.rs  mod.rs  source.rs  spooler.rs
src/render/: cat.rs  mod.rs
src/render/tui/: app.rs  highlight.rs  input.rs  mod.rs  view.rs
tests/: cli_tests.rs  golden_tests.rs  integration_tests.rs  large_file_tests.rs  property_tests.rs
tests/fixtures/golden/: array.json  nested.jsonl  simple.jsonl
