[package]
name = "jlcat"
version = "0.1.0"
edition = "2021"
description = "JSON/JSONL table viewer with TUI support"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
atty = "0.2"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
