[package]
name = "jlcat"
version = "0.1.1"
edition = "2021"
description = "JSON/JSONL table viewer with TUI support"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
atty = "0.2"
tempfile = "3"
comfy-table = "7"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"
